--- a/Daily/src/main/webapp/resources/myLib/mainhome.css
+++ b/Daily/src/main/webapp/resources/myLib/mainhome.css
@@ -20,6 +20,7 @@ a:active {
       width: 100%;
       height: 30px;
       background-color: #e5e5e5;
+      
       display: flex;
       align-items: center;
     }
@@ -40,6 +41,7 @@ a:active {
       width: 100%;
       height: 5rem;
       justify-content: space-between;
+      margin-top: 30px;
       align-items: center;
       padding: 0 1.78125rem;
       box-sizing: border-box;
