--- a/Daily/src/main/webapp/resources/Lib/mainhome.css
+++ b/Daily/src/main/webapp/resources/Lib/mainhome.css
@@ -5,14 +5,34 @@ a {
 	font-weight:bold;
 	
 	}	
+
 a:hover { color:DimGray; 
 		  font-size: 1.2em; 
 		 } 
 a:active { 
 	color:SeaGreen; 
 	} 
-
-
+	
+ /* 상품 리스트 나열 CSS */
+.product_main{
+	margin: 0 auto;
+}
+.product_list{
+   			   display: flex;
+  			   flex-wrap: wrap;
+   			   justify-content: space-between;
+   			   margin: 30px;
+			   list-style-type: disc;
+			   padding: 0;
+  			 }
+li { 
+	padding:0;
+	text-align: center;
+	list-style-type: none;
+     }  		
+     
+   /* 필터 바 css 구현 부 */  
+	 
 
 /* home페이지 css 구현 부  */
 /* 서비스 바 (고객센터 매장위치)*/
@@ -307,7 +327,7 @@ a:active {
       display: block;
       margin: auto;
       width: 400px;
-      height: 500px;
+      height: 400px;
       overflow: hidden;
       margin: 0 auto;
       text-align: center;
