--- a/Daily/src/main/webapp/resources/Lib/servicecenter.css
+++ b/Daily/src/main/webapp/resources/Lib/servicecenter.css
@@ -1,2 +1,113 @@
-@charset "UTF-8";
+	a {
+		color: gray;
+		text-decoration-line: none;
+	}
 
+	/*   header  */
+	.Servicecenter_header {
+		text-align: center;
+		font-size: 27px;
+		font-weight: 600;
+		color: #000;
+		padding: 50px 0 80px;
+	}
+
+	/*   nav  */
+	.qna_nav {
+		display: flex;
+		height: 50px;
+		min-width: 800px;
+		align-items: center;
+		color: black;
+	}
+
+	.qna_nav_center {
+		display: flex;
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	.qna_nav_item {
+		margin: 20px;
+
+	}
+
+	/*   infomation  */
+	.info {
+		display: flex;
+		margin-top: 40px;
+		margin-left: 10%;
+		margin-right: 10%;
+		margin-bottom: 50px;
+		min-width: 800px;
+	}
+
+	.info_left {
+		display: flex;
+		box-sizing: border-box;
+		width: 100%;
+
+	}
+
+	.info_left_img {
+		margin-right: 40px;
+		margin-left: 20%;
+	}
+
+	.info_left_warap {
+		display: block;
+	}
+
+	.info_word_a {
+		margin-bottom: 10px;
+	}
+
+	.info_word_b {
+		font-size: 28px;
+		font-weight: bold;
+		color: #000;
+	}
+
+	.info_word_c {
+		margin-top: 10px;
+	}
+
+	.info_right {
+		display: flex;
+		box-sizing: border-box;
+		width: 100%;
+
+	}
+
+	.info_right_img {
+		margin-right: 40px;
+		margin-left: 20%;
+	}
+
+	.info_right_warap {
+		display: block;
+	}
+
+	.info_word_d {
+		font-size: 20px;
+		font-weight: bold;
+		color: #000;
+	}
+
+	/*   list  */
+
+	table {
+	 width: 100%;
+	 height: 40px;
+	 border-top: 1px solid #444444;
+	 border-collapse: collapse;
+ }
+
+ th:nth-child(3){
+ 	width: 800px;
+ }
+
+ th, td {
+	 border-bottom: 1px solid silver;
+	 padding: 10px;
+ }
