--- a/Daily/src/main/webapp/resources/Lib/mainhome.css
+++ b/Daily/src/main/webapp/resources/Lib/mainhome.css
@@ -21,24 +21,25 @@ a:active:not(.home) {
 	font-weight:bold;
 }
 
+.product_main{
+		align-content: center;
+}
 	
  /* 상품 리스트 나열 CSS */
-.product_main{
-	margin: 0 auto;
-}
+
 .product_list{
-  			   flex-wrap: wrap;
-   			   justify-content: space-between;
-   			   margin: 30px;
-			   list-style-type: disc;
-			   padding: 0;
+			 display: inline-flex;
+			 flex-wrap: wrap;
+			 justify-content: center;
   			 }
-li { 
-	padding:0;
-	text-align: center;
-	list-style-type: none;
-     }  		
+.product_item{
+		display: block;
+		margin: 20px;
+}
      
+ .product_info{
+ 			text-align: center;
+ }
    /* 필터 바 css 구현 부 */  
 	 
 
@@ -328,6 +329,7 @@ li {
       height: 500px;
       margin: 20px;
       border: 1px solid black;
+      
     }
 
     /* 제품 이미지 공간 분할 */
@@ -372,6 +374,7 @@ li {
 
     /* 제품 이름 공간 분할 */
     .product_name {
+      margin-top:30px;
       font-size: 20px;
       font-weight: bold;
       font-family: '맑은 고딕', Arial, sans-serif;
