--- a/Daily/src/main/webapp/resources/Lib/servicecenter.css
+++ b/Daily/src/main/webapp/resources/Lib/servicecenter.css
@@ -1,129 +1,136 @@
 a:not(.home) {
-	color:gray; 
-	text-decoration:none; 
-	font-weight:bold;
-	
-	}	
-
-a:hover:not(.home) { color:DimGray; 
-		  font-size: 1.2em; 
-		 } 
-
-a:active:not(.home) { 
-	color:SeaGreen; 
-	} 
-/* 제목 색갈 안변하게   */
-.home{
-	color:black;
-	text-decoration:none; 
-	font-weight:bold;
+	color: gray;
+	text-decoration: none;
+	font-weight: bold;
 }
 
-	/*   header  */
-	.Servicecenter_header {
-		text-align: center;
-		font-size: 27px;
-		font-weight: 600;
-		color: #000;
-		padding: 50px 0 80px;
-	}
+a:hover:not(.home) {
+	color: DimGray;
+	font-size: 1.2em;
+}
 
-	/*   nav  */
-	.qna_nav {
-		display: flex;
-		height: 50px;
-		min-width: 800px;
-		align-items: center;
-		color: black;
-	}
+a:active:not(.home) {
+	color: SeaGreen;
+}
+/* 제목 색갈 안변하게   */
+.home {
+	color: black;
+	text-decoration: none;
+	font-weight: bold;
+}
 
-	.qna_nav_center {
-		display: flex;
-		margin-left: auto;
-		margin-right: auto;
-	}
+/*   header  */
+.Servicecenter_header {
+	text-align: center;
+	font-size: 27px;
+	font-weight: 600;
+	color: #000;
+	padding: 50px 0 80px;
+}
 
-	.qna_nav_item {
-		margin: 20px;
+/*   nav  */
+.qna_nav {
+	display: flex;
+	height: 50px;
+	min-width: 800px;
+	align-items: center;
+	color: black;
+}
 
-	}
+.qna_nav_center {
+	display: flex;
+	margin-left: auto;
+	margin-right: auto;
+}
 
-	/*   infomation  */
-	.info {
-		display: flex;
-		margin-top: 40px;
-		margin-left: 10%;
-		margin-right: 10%;
-		margin-bottom: 50px;
-		min-width: 800px;
-	}
+.qna_nav_item {
+	margin: 20px;
+}
 
-	.info_left {
-		display: flex;
-		box-sizing: border-box;
-		width: 100%;
+/*   infomation  */
+.info {
+	display: flex;
+	margin-top: 40px;
+	margin-left: 10%;
+	margin-right: 10%;
+	margin-bottom: 50px;
+	min-width: 800px;
+}
 
-	}
+.info_left {
+	display: flex;
+	box-sizing: border-box;
+	width: 100%;
+}
 
-	.info_left_img {
-		margin-right: 40px;
-		margin-left: 20%;
-	}
+.info_left_img {
+	margin-right: 40px;
+	margin-left: 20%;
+}
 
-	.info_left_warap {
-		display: block;
-	}
+.info_left_warap {
+	display: block;
+}
 
-	.info_word_a {
-		margin-bottom: 10px;
-	}
+.info_word_a {
+	margin-bottom: 10px;
+}
 
-	.info_word_b {
-		font-size: 28px;
-		font-weight: bold;
-		color: #000;
-	}
+.info_word_b {
+	font-size: 28px;
+	font-weight: bold;
+	color: #000;
+}
 
-	.info_word_c {
-		margin-top: 10px;
-	}
+.info_word_c {
+	margin-top: 10px;
+}
 
-	.info_right {
-		display: flex;
-		box-sizing: border-box;
-		width: 100%;
+.info_right {
+	display: flex;
+	box-sizing: border-box;
+	width: 100%;
+}
 
-	}
+.info_right_img {
+	margin-right: 40px;
+	margin-left: 20%;
+}
 
-	.info_right_img {
-		margin-right: 40px;
-		margin-left: 20%;
-	}
+.info_right_warap {
+	display: block;
+}
 
-	.info_right_warap {
-		display: block;
-	}
+.info_word_d {
+	font-size: 20px;
+	font-weight: bold;
+	color: #000;
+}
 
-	.info_word_d {
-		font-size: 20px;
-		font-weight: bold;
-		color: #000;
-	}
+/*   list  */
+table {
+	width: 100%;
+	height: 40px;
+	border-top: 1px solid #444444;
+	border-collapse: collapse;
+}
 
-	/*   list  */
+th:nth-child(3) {
+	width: 800px;
+}
 
-	table {
-	 width: 100%;
-	 height: 40px;
-	 border-top: 1px solid #444444;
-	 border-collapse: collapse;
- }
+th, td {
+	border-bottom: 1px solid silver;
+	padding: 10px;
+}
 
- th:nth-child(3){
- 	width: 800px;
- }
+td {
+	text-align: center;
+	align-items: center;
+}
 
- th, td {
-	 border-bottom: 1px solid silver;
-	 padding: 10px;
- }
+list_item{
+	display:flex;
+	margin-left: 50px;
+	
+}
