--- a/Daily/src/main/webapp/resources/Lib/mainhome.css
+++ b/Daily/src/main/webapp/resources/Lib/mainhome.css
@@ -226,13 +226,30 @@ a:active:not(.home) {
 	font-size: 18px;
 	font-family: 'Goudy Old Style', Arial, sans-serif;
 	color: #757575;
+	align-items: center;
 }
 
 /*이미지 제목  */
 .img_content_title {
 	font-size: 25px;
 	color: black;
+	align-items: center;
+	text-align: center;
 }
+.img_shopping{
+	align-items: center;
+	text-align: center;
+}
+
+#shopping_button {
+      border: 1px solid #A9A9A9;
+      border-radius: 30px;
+      padding-left: 60px;
+      padding-right: 60px;
+      background-color: black;
+      font-size: 20px;
+      color: white;
+    }
 
 /*제품 간단리스트 공간 분할   */
 .product {
