--- a/Daily/src/main/webapp/resources/Lib/productForm.css
+++ b/Daily/src/main/webapp/resources/Lib/productForm.css
@@ -1,9 +1,16 @@
 
 .regist_table{
-			width: 400px;
+			width: 500px;
 			margin-left: auto;
 			margin-right:auto;
-			text-align: center;
+			text-align: left;
 			align-content: center;
 			}
 			
+img {
+  width: 300px;
+  height: 180px;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-color: #e0e0e0;
+}
