--- a/Daily/src/main/webapp/resources/Lib/productForm.css
+++ b/Daily/src/main/webapp/resources/Lib/productForm.css
@@ -7,10 +7,12 @@
 			align-content: center;
 			}
 			
-img {
-  width: 300px;
-  height: 180px;
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-  background-color: #e0e0e0;
-}
+table {
+    width: 100%;
+    border-top: 1px solid #444444;
+    border-collapse: collapse;
+  }
+th, td {
+    border-bottom: 1px solid #444444;
+    padding: 10px;
+  }
