--- a/Daily/src/main/webapp/resources/Lib/mainhome.css
+++ b/Daily/src/main/webapp/resources/Lib/mainhome.css
@@ -241,7 +241,7 @@ a:active:not(.home) {
 	text-align: center;
 }
 
-#shopping_button {
+.shopping_button {
       border: 1px solid #A9A9A9;
       border-radius: 30px;
       padding-left: 60px;
@@ -275,6 +275,12 @@ a:active:not(.home) {
 	margin-left: auto;
 	font-size: 15px
 }
+/* 제품 사진 사이즈 */
+ .product_img { 
+	width: 100%;
+	height: 400px;
+}
+
 
 /* 제품 이름 공간 분할 */
 .product_name {
